Completeness fixes: CWE-477 – eliminate all remaining deprecated String-charset URLEncoder/URLDecoder/String constructors and missing StandardCharsets imports across AbstractOAuth2, GoogleOAuth, HttpPair, HttpUtil, UserService, PBEWithMD5AndDESEncoder, and old/ archive files